--- a/myApp01/src/app/A103UserData/A103UserData.component.html
+++ b/myApp01/src/app/A103UserData/A103UserData.component.html
@@ -149,7 +149,9 @@
     </nav>
     <div class="list-and-new-form-container">
       <div class="row">
-        <h1>List of all staff</h1>
+        <div class="col-lg-4 col-md-8 col-sm-12 p-1 m-1">
+          <button type="button">Add new Form</button>
+        </div>
       </div>
     </div>
   </div>
